<resources>
    <string name="app_name">BakingApp</string>
    <string name="lasagna">Lasagna</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="ratio">Ratio</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="video_not_available">Video Not Available</string>
    <string name="retry">RETRY</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="settings">Settings</string>
    <string name="thumbnail_text">Thumbnail Image</string>
</resources>
