<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="7dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp">

    <TextView
        android:id="@+id/step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:padding="4dp"
        tools:text="Step #" />

</android.support.v7.widget.CardView>